--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -6,11 +6,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(35px + 2vmin);
-  color: white;
+  color: #141426;
 }
 
 .App_header_arrow {
   height: 100px;
-  color: white;
+  color: #141426;
   transform: rotate(180deg);
 }
