--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,16 @@
 body {
   margin: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:white;
-  
+  color: #141426;
 }
 
-
 a {
-  text-decoration:none;
-  color:inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 li {
-  list-style:none;
+  list-style: none;
 }
