--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,29 +1,28 @@
-.App__contact{ 
-    position:fixed;
-    top:50px;
-    right:50px;
-  }
-  
-.contact__icons-list{
-    display:flex;
-    list-style:none;
-    padding:0;  
-    font-size:25px;
-  }
-  
-.contact__item{
-    border:1.5px solid white;
-    border-radius:50%;
-    width:40px;
-    height:40px;
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    margin-left:20px;
-    :hover{
-      color:red; 
-      border:0;
-      border-radius:50%;  
-    }
-  }
+.App__contact {
+  position: fixed;
+  top: 50px;
+  right: 50px;
+}
 
+.contact__icons-list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  font-size: 25px;
+}
+
+.contact__item {
+  border: 1.5px solid #141426;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  :hover {
+    color: red;
+    border: 0;
+    border-radius: 50%;
+  }
+}
